Improve file header and documentation

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -12,3 +12,5 @@
   directions.
 - Improve the layout of the arena.
 - Mark the clash position.
+- Move `unhome` to Galope.
+- Use Galope's `random-range`.
