Improve key conversion; fix `pause`

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -26,5 +26,4 @@
   causes a dodge.
 - Use the status bar for messages.
 - Display a message when the game is paused.
-- Improve `valid-key?` with _xchar_ support, rename it and move it to
-  Galope.
+- Move `ekey>` to Galope.
