Factor the calculations of score coordinates

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -27,3 +27,4 @@
 - Use the status bar for messages.
 - Display a message when the game is paused.
 - Move `ekey>` to Galope.
+- Make ASCII/Unicode mode configurable.
