Make swallowed apples visible in the body

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,6 +1,6 @@
 = To-do list of Serpentino
 :author: Marcos Cruz (programandala.net)
-:revdate: 2017-11-24
+:revdate: 2017-11-2t
 
 == 2017-11-22
 
@@ -34,6 +34,5 @@
 - Make `colorize` configurable at the start.
 - Separate wall size from arena size.
 - Color schemes in files.
-- Make eaten apples visible in the body.
 - Separate stamina from score; decrease stamina after every step and
   change of direction.
